# robotrace-dev

./: CHANGELOG.md  LICENSE  MIRROR_NOTICE.md  README.md  api-surface.json  pyproject.toml
examples/: gymnasium_smoke.py  quickstart.py  r2_smoke.py  seed_demo_episode.py  smoke_all.py  with_context.py
scripts/: render_pypi_readme.py  snapshot_api_surface.py
src/robotrace/: __init__.py  _credentials.py  _deprecation.py  _http.py  _otel.py  _version.py  cli.py  client.py  episode.py  errors.py  evals.py  types.py  verify.py
src/robotrace/adapters/: __init__.py
src/robotrace/adapters/gymnasium/: __init__.py  _encode.py  _flatten.py  _scan.py  _upload.py
src/robotrace/adapters/hdf5/: __init__.py  _classify.py  _encode.py  _scan.py  _upload.py
src/robotrace/adapters/lerobot/: __init__.py  _classify.py  _encode.py  _meta.py  _upload.py
src/robotrace/adapters/ros2/: __init__.py  _classify.py  _encode.py  _record.py  _scan.py  _upload.py
tests/: test_api_surface_freeze.py  test_cli_login.py  test_cli_logout.py  test_config.py  test_deprecation.py  test_evals.py  test_gymnasium_adapter.py  test_hdf5_adapter.py  test_lerobot_adapter.py  test_otel.py  test_rate_limit.py  test_request_shape.py  test_ros2_adapter.py  test_types.py
