[project]
# `robotrace` (no hyphen) was claimed on PyPI in March 2026 by an
# unrelated robotics-observability project (FaultLine-labs /
# RoboSwarm Team) - their stub redirects to their `robotrace-sdk`.
# We initially tried `robo-trace` but PyPI's typo-squat protector
# (Damerau-Levenshtein distance < 3 from an existing project) blocked
# it with `400 Bad Request`. `robotrace-dev` clears the threshold
# (distance 4 from `robotrace`, distance 3 from `robotrace-sdk`) AND
# matches our `robotrace.dev` domain literally - the cleanest
# pragmatic name for `pip install`. The *import* path stays
# `import robotrace` for muscle memory and zero-churn upgrades.
# Pattern is identical to:
#   `pip install python-dateutil` → `import dateutil`
#   `pip install scikit-learn`    → `import sklearn`
name = "robotrace-dev"
# 0.1.0a11 - doc-only release: refresh PyPI README (status + adapter
# pins were stuck at 0.1.0a6), sync web docs install pins, and route
# SDK ConfigurationError hints through `_version.install_command()` so
# future bumps don't drift again. No code or API changes vs 0.1.0a10.
#
# 0.1.0a10 - live `ros2.record(topics=[...])` ships. Subscribes to a
# set of ROS 2 topics via rclpy during a run, writes every message
# into a tempdir rosbag2 directory, then encodes + uploads + finalizes
# as one episode on context-manager exit. Same artifact contract as
# the offline `upload_bag(...)` path - the only difference is which
# side wrote the bag. rclpy is NOT pinned (ships with the distro via
# apt; PyPI wheels are unreliable for rmw compatibility); lazy-import
# with a friendly ConfigurationError pointing at the apt command when
# missing. New `_BagWriter` (typestore-aware rosbag2 writer) + new
# `LiveRecording` handle. Topics validated against the live ROS 2
# graph at start() so typos fail loudly. P1b closes: the offline
# rosbag adapter plus the live record bridge cover both shapes the
# marketing site claims. 7 new SDK tests; suite is now 112 passing.
#
# 0.1.0a9 - `robotrace.types` ships. Typed metadata classes promote the
# half-dozen payloads that show up in every ROS 2 / LeRobot / Gymnasium
# integration (`JointState`, `Pose3D`, `Twist`, `Imu`, `Battery`,
# `EpisodeOutcome`) into first-class dataclasses. Pass them straight
# into `log_episode(metadata={...})` / `start_episode(metadata={...})`
# and the SDK serializes each one to a `__type`-tagged dict the portal
# renders with a per-shape widget (joint sparklines, pose grids,
# battery pills, outcome stats). Pure superset of the existing
# free-form metadata bag - plain dicts continue to work. Server-side:
# new shared validator `lib/metadata/typed-values.ts` runs in the
# create + finalize ingest routes; unknown `__type` values pass
# through so newer SDKs ship new types against older servers without
# coordination. 21 new SDK tests; suite is now 88 passing.
#
# 0.1.0a8 - `robotrace.verify` ships. Promote a failed episode (portal
# button or `rt.verify.promote(...)`) and the next candidate has to
# replay it without re-failing before it can ship. New CLI verb
# `robotrace verify check --candidate <version>` is a CI deploy gate
# that exits non-zero until every critical scenario passes for that
# candidate. The Python surface is `robotrace.verify` with four
# verbs: `promote`, `check_gate`, `record_result`, `run_check`
# (replay + record + re-check, one call). Same customer-side runner
# and weight-stays-local guarantees as `robotrace.evals`. Server side:
# new `verification_scenarios` + `verification_results` tables
# (migration 0015), three ingest routes (POST /api/verify/promote +
# /check + /result), an auto-sync hook on eval-run finalize that
# mirrors matching baseline results onto active scenarios, and the
# new portal section under /portal/verify (list + detail).
#
# 0.1.0a7 - Gymnasium env rollouts are first-class. Three verbs mirror
# ROS 2 / LeRobot - scan_env, encode_rollout, upload_rollout. NPZ for
# obs/actions, optional mp4 from env.render(). MuJoCo via Gymnasium env
# ids on the user side; no separate adapter.
#
# 0.1.0a6 - `robotrace login` terminal UX: friendly welcome line, clearer
# verification/spinner affordances, ANSI hints when tty + NO_COLOR unset.
#
# 0.1.0a5.post1 - PyPI README + project metadata only: CLI quickstart
# (login / whoami), CLI section, credential vs env note, one-line
# `description` + `cli` keyword. Wheel byte-identical to 0.1.0a5.
#
# 0.1.0a5 - OTel traceparent correctness: preserve the upstream
# trace_flags byte in the W3C header instead of forcing sampled=01,
# so APMs that trust the bit stay aligned with the customer's sampler.
#
# 0.1.0a4 - the replay regression harness lands. Closes the last
# vapor marketing claim ("re-roll a candidate policy against
# history") with a customer-side runner: weights never touch our
# infra. Adds the `robotrace.evals` module (`create_run` /
# `run_against` / `complete_run`) and the matching CLI verb
# (`robotrace replay run --policy module:fn --baseline-episodes
# ids|@file --candidate-version vN`). Wires three new ingest routes
# on the server (POST /api/ingest/eval-run + /result + /finalize)
# against the new `eval_runs` + `eval_results` tables
# (migrations 0011 + 0012). Same metric set as the marketing
# DiffCard (success / reward / collision / time-to-goal / OOD
# share); sign-aware delta_is_better encoded server-side. 16 new
# SDK tests; suite is now 49 passing.
#
# Stacked on the harness in the same release:
#   * `RateLimitError(APIError)` carries `retry_after` parsed from
#     `Retry-After`; the HTTP layer auto-retries 429s on safe paths
#     (start_episode create, signed-PUT uploads, evals create /
#     result push) with exponential backoff. Explicitly NOT
#     retrying `finalize` so a future paid tier can't double-bill
#     when the server already processed the request before the 429
#     came back. Same trade-off as `ServerError`, now typed.
#   * `robotrace logout --revoke` POSTs `/api/cli/auth/revoke`,
#     marks the calling key revoked on `client_api_keys`, and only
#     then drops `~/.robotrace/credentials`. Stolen-laptop scenario
#     no longer requires opening the portal.
#   * `_print_summary` formatter hardening - non-numeric metric
#     deltas no longer crash the post-run summary table, and NPZ
#     fetcher accepts pickled-object columns (LeRobot string
#     trajectories) without an opaque `ValueError`.
#
# v3.0 LeRobot dataset support stays explicitly deferred - still
# hard-fails with a clear v2.1 fallback hint. The install pin in
# apps/web/lib/sdk/version.ts moves to 0.1.0a4 in lockstep this
# release (replay surfaces depend on the new evals module being
# present at runtime).
#
# Earlier in 0.1.0a3: the LeRobot adapter
# (`robotrace.adapters.lerobot`) - Hugging Face LeRobot v2.1
# datasets → one RoboTrace episode per trajectory via pyarrow +
# huggingface_hub (no torch / pyav / CUDA wheels). 0.1.0a2 added
# OpenTelemetry trace correlation: when called inside an active
# OTel span, log_episode quietly attaches trace_id / span_id /
# traceparent to the create-episode payload, server stores it on
# episodes.metadata.otel for portal APM deep-links. The "sacred"
# log_episode signature stays unchanged across both bumps.
version = "0.1.0a11"
description = "RoboTrace - Python SDK and CLI for observability and evals on AI robots."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639 (Metadata 2.4): use SPDX `license` string + `license-files`
# glob. The old `license = { text = "MIT" }` table form combined with
# `License-File: LICENSE` (which hatchling auto-emits) violates PEP
# 639 and PyPI rejects with `400 Bad Request`. The
# `License :: OSI Approved :: MIT License` classifier is also gone -
# PEP 639 forbids combining license classifiers with the new
# `License-Expression` metadata field.
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboTrace", email = "hello@robotrace.dev" }]
keywords = ["robotics", "observability", "evals", "ros2", "lerobot", "gymnasium", "vla", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Hard deps kept minimal so the SDK doesn't drag in heavyweight
# robotics libs by default. Adapters live behind `[project.optional-dependencies]`.
#
# httpx - sync+async HTTP, modern timeouts, Cloudflare R2 PUT support
#         via `client.put(url, content=...)` for streaming uploads.
#
# Upper bound `<1` is intentional. httpx 1.0.dev3 (May 2026) renamed
# `httpx.Timeout` → `httpx.timeout`, which breaks our SDK at import
# time - `_http.py` instantiates `httpx.Timeout(connect=..., read=...)`.
# The bound prevents pip from resolving to the dev release in *any*
# install path, including `pip install --pre robotrace-dev` (which
# would otherwise opt into pre-releases globally and pick up
# `httpx 1.0.dev3` automatically). Lift this once httpx 1.0 ships
# stable AND we've validated against it.
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
# Adapters for popular robotics stacks. None are required to log a
# raw episode - they exist to slurp dataset formats into the
# log_episode contract.
#
# `[ros2]` reads rosbag2 files (sqlite3 + mcap) without requiring an
# actual ROS 2 / rclpy install - `rosbags` is pure-Python, so the
# adapter runs in CI and on macOS dev boxes. `numpy` is listed even
# though `rosbags` already pulls it in, so a `pip install
# 'robotrace[ros2]'` line stays self-documenting.
#
# Image-topic encoding (sensor_msgs/Image → mp4) lives behind the
# `[video]` extra so a sensor-only bag doesn't pay the opencv install
# cost. The adapter raises a friendly error pointing at
# `pip install 'robotrace-dev[ros2,video]'` when an image topic is
# present and opencv is missing.
ros2 = ["rosbags>=0.11,<0.12", "numpy>=1.26"]
# `[lerobot]` reads the LeRobot dataset on-disk format directly -
# pyarrow for parquet, huggingface_hub for Hub downloads (single-file
# fetches; no full-repo clone). We deliberately do NOT depend on the
# `lerobot` PyPI package: it pulls torch, torchvision, torchaudio,
# datasets, pyav, and several CUDA wheels (multi-GB install). Reading
# the format directly stays loyal to the SDK's "lean install" rule and
# matches the ~20 MB footprint of `[ros2]`. Multi-camera mp4 tiling
# uses opencv from the `[video]` extra; pass `canonical_camera=...`
# to skip tiling and avoid the opencv install entirely.
lerobot = [
    "huggingface_hub>=0.20,<1",
    "pyarrow>=14",
    "numpy>=1.26",
]
# `[gymnasium]` runs env rollouts and packs observations/actions into
# NPZ. Video from env.render() uses opencv via the separate `[video]`
# extra. MuJoCo and other sim deps are intentionally NOT pinned here -
# users install `gymnasium[mujoco]` (or similar) for their env id.
gymnasium = ["gymnasium>=1.0,<2", "numpy>=1.26"]
video = ["opencv-python>=4.10"]
numpy = ["numpy>=1.26"]

# Trace correlation - pulls only `opentelemetry-api`, NOT the heavy
# `opentelemetry-sdk` (which carries exporters, processors, and a
# whole HTTP/gRPC stack the user already has from their OTel
# instrumentation). The SDK reads the *active* span via
# `opentelemetry.trace.get_current_span()` if importable, no-op
# otherwise. So users who already instrument with OTel get
# `pip install 'robotrace-dev[otel]'` and zero extra config; users who
# don't are unaffected.
otel = ["opentelemetry-api>=1.20"]

dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
]

[project.urls]
# These appear on the PyPI project page sidebar in the order
# declared. Repository goes first because that's the most-clicked
# link from a PyPI listing - engineers want to see the source
# before they `pip install`. The GitHub repo is a public read-only
# mirror of `packages/sdk-python/` from our private monorepo
# (see .github/workflows/mirror-sdk.yml).
Homepage = "https://robotrace.dev"
Documentation = "https://robotrace.dev/docs"
Repository = "https://github.com/Artl13/robotrace-dev"
Issues = "https://github.com/Artl13/robotrace-dev/issues"
Changelog = "https://robotrace.dev/docs/changelog"

# `pip install robotrace-dev` exposes a `robotrace` console command,
# implemented in `src/robotrace/cli.py`. It's intentionally tiny
# (login / logout / whoami) so the install footprint stays small.
[project.scripts]
robotrace = "robotrace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robotrace"]

[tool.hatch.build.targets.sdist]
include = ["src/robotrace", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# `__all__` is grouped by category (verbs / result types / errors /
# convenience), not alphabetized. The grouping carries doc value -
# leave it alone.
"src/robotrace/__init__.py" = ["RUF022"]
"src/robotrace/adapters/ros2/__init__.py" = ["RUF022"]
"src/robotrace/adapters/lerobot/__init__.py" = ["RUF022"]
"src/robotrace/adapters/gymnasium/__init__.py" = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Optional-extra deps don't ship type stubs and may not even be
# installed when mypy runs (CI without `[ros2,video]` extras). Telling
# mypy to ignore missing imports here is preferable to scattering
# inline `# type: ignore[import-not-found]` across the adapter
# modules - those go stale the moment the dep gets installed.
[[tool.mypy.overrides]]
module = [
    "rosbags.*",
    "cv2",
    "cv2.*",
    "gymnasium",
    "gymnasium.*",
    "opentelemetry",
    "opentelemetry.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
